[DOCS] Ajuste le niveau de vulgarisation de SOUTENANCE.md + slide bonnes pratiques
- SOUTENANCE.md : reformulation moins vulgarisée (public dev 3e année),
  contenu technique inchangé.
- SLIDE-BONNES-PRATIQUES.md : contenu de la slide "Mise en place des
  bonnes pratiques" (GitHub, Clean Code, sécurité du .env), avec
  exemples concrets tirés du code (noms, fonctions courtes, SRP,
  Optional/exceptions, DRY) et une limite assumée (parseLong dupliqué).